fix spacing above and below hr in vertical nav menu

--- a/consultations_prj/media/css/project.css
+++ b/consultations_prj/media/css/project.css
@@ -162,7 +162,8 @@ div.workflow-panel {
     /* padding-left: 12px; */
     margin-bottom: 10px;
     margin-top: 10px;
-    min-height: 200px;
+    margin-bottom: 10px;
+    /* min-height: 200px; */
     padding-left: 0;
     /* border-bottom: #fff; */
     border-width: 2px;
@@ -205,7 +206,7 @@ div.workflow-panel {
     border-color: white;
     margin-left: 30px;
     margin-right: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .workflow-panel.navbarclosed > hr {
@@ -213,6 +214,7 @@ div.workflow-panel {
     margin-left: 0px;
     margin-right: 0px;
     margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .workflow-panel .navbarclosed > hr {
